--- a/locationApp/Base.lproj/LaunchScreen.storyboard
+++ b/locationApp/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +16,48 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to LocationApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRb-gf-b5Y">
+                                <rect key="frame" x="187" y="280" width="226" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Wh2-Y4-FMl"/>
+                                    <constraint firstAttribute="width" constant="226" id="hWq-6G-ybc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project done by Ravindra Mukund" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Srp-Ff-7dz">
+                                <rect key="frame" x="183" y="548" width="235" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="235" id="Roq-KL-uMm"/>
+                                    <constraint firstAttribute="height" constant="21" id="zGS-xb-csy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Srp-Ff-7dz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0JL-VG-b1L"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Srp-Ff-7dz" secondAttribute="bottom" constant="31" id="DF0-zw-J7C"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="GRb-gf-b5Y" secondAttribute="bottom" constant="280" id="FGq-aa-lUo"/>
+                            <constraint firstItem="GRb-gf-b5Y" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="260" id="Fqw-JE-dlg"/>
+                            <constraint firstItem="GRb-gf-b5Y" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="bPm-Cp-wtP"/>
+                            <constraint firstItem="Srp-Ff-7dz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qNV-2e-fpy"/>
+                            <constraint firstItem="GRb-gf-b5Y" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uPD-a3-jjk"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="qNV-2e-fpy"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="436" y="332"/>
         </scene>
     </scenes>
 </document>
